--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <ListView
-        android:id="@+id/foodList"
+        android:id="@+id/foodLv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
